# kahoot-rs

./: Cargo.toml  README.md  deny.toml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: CI.yml  rustdoc.yml
cometd/: Cargo.toml  all.html  attr.async_trait.html  enum.CometError.html  index.html  macro.json.html  sidebar-items.js  type.CometResult.html
cometd/client/: index.html  sidebar-items.js  struct.Client.html  struct.Context.html  struct.DefaultHandler.html  trait.Handler.html
cometd/client/context/: struct.Context.html
cometd/client/handler/: struct.DefaultHandler.html  trait.Handler.html
cometd/examples/: chat.rs
cometd/packet/: enum.Channel.html  enum.ConnectionType.html  enum.Reconnect.html  index.html  sidebar-items.js  struct.Advice.html  struct.Packet.html
cometd/packet/advice/: enum.Reconnect.html  struct.Advice.html
cometd/packet/channel/: enum.Channel.html
cometd/packet/connection_type/: enum.ConnectionType.html
cometd/src/: client.rs  lib.rs  packet.rs  transport.rs
cometd/src/client/: context.rs  handler.rs
cometd/src/packet/: advice.rs  channel.rs  connection_type.rs
implementors/cometd/client/: trait.Handler.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/str/traits/: trait.FromStr.js
implementors/kahoot/client/: trait.Handler.js
implementors/kahoot/client/handler/: trait.Handler.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
kahoot/: Cargo.toml  all.html  attr.async_trait.html  index.html  sidebar-items.js  struct.LoginResponse.html  trait.Handler.html
kahoot-finder/: Cargo.toml
kahoot-finder/src/: main.rs
kahoot-legacy/: Cargo.toml
kahoot-legacy/cometd-client/: Cargo.toml
kahoot-legacy/cometd-client/src/: handler.rs  lib.rs  packet.rs
kahoot-legacy/kahoot-cli/: Cargo.toml
kahoot-legacy/kahoot-cli/src/: main.rs
kahoot-legacy/src/: challenge.rs  error.rs  lib.rs  main.rs
kahoot-legacy/tests/: common.rs
kahoot-swarm/: Cargo.toml
kahoot-swarm/src/: main.rs
kahoot/challenge/: enum.DecodeError.html  enum.DecodeTokenError.html  enum.SendDuccErrorKind.html  fn.decode.html  fn.decode_boa.html  fn.decode_challenge.html  fn.decode_challenge_boa.html  fn.decode_token.html  index.html  sidebar-items.js  struct.Client.html  struct.GetChallengeJsonResponse.html  struct.ProbeResult.html  struct.SendDuccError.html
kahoot/client/: constant.CONTROLLER_CHANNEL.html  constant.DEFAULT_DEVICE_HEIGHT.html  constant.DEFAULT_DEVICE_WIDTH.html  constant.DEFAULT_LAG.html  constant.PLAYER_CHANNEL.html  constant.STATUS_CHANNEL.html  index.html  sidebar-items.js  struct.Client.html  struct.Context.html  struct.DefaultHandler.html  trait.Handler.html
kahoot/client/handler/: struct.DefaultHandler.html  trait.Handler.html
kahoot/error/: enum.KahootError.html  index.html  sidebar-items.js  type.KahootResult.html
kahoot/examples/: bot.rs
kahoot/message/: enum.Message.html  index.html  sidebar-items.js  struct.FeedbackMessage.html  struct.GameOverMessage.html  struct.GetReadyMessage.html  struct.PlayAgainMessage.html  struct.RevealAnswerMessage.html  struct.RevealAnswerMessagePointsData.html  struct.RevealAnswerMessagePointsDataAnswerStreakPoints.html  struct.RevealRankingMessage.html  struct.StartQuestionMessage.html  struct.StartQuizMessage.html  struct.TimeUpMessage.html  struct.UsernameAcceptedMessage.html
kahoot/src/: challenge.rs  client.rs  error.rs  js_env_patches.js  lib.rs  message.rs
kahoot/src/client/: handler.rs
kahoot_finder/: all.html  constant.BACKOFF_TIME.html  constant.CODE_LIMIT.html  constant.DEFAULT_NAME.html  fn.main.html  index.html  sidebar-items.js  struct.ProbeHandler.html
kahoot_swarm/: all.html  enum.TaskMessageData.html  fn.main.html  fn.read_line.html  index.html  sidebar-items.js  struct.BotHandler.html  struct.Swarm.html  struct.TaskMessage.html
src/cometd/: client.rs.html  lib.rs.html  packet.rs.html  transport.rs.html
src/cometd/client/: context.rs.html  handler.rs.html
src/cometd/packet/: advice.rs.html  channel.rs.html  connection_type.rs.html
src/kahoot/: challenge.rs.html  client.rs.html  error.rs.html  lib.rs.html  message.rs.html
src/kahoot/client/: handler.rs.html
src/kahoot_finder/: main.rs.html
src/kahoot_swarm/: main.rs.html
