[package]
name = "cometd"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[dependencies]
futures = "0.3.4"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
tokio-tungstenite = { version = "0.10.1", features = [ "tls" ] }
tokio = { version = "0.3.2", features = [ "stream", "sync", "time" ] }
tokio-tls = "0.3.0"
tungstenite = "0.10.1"
async-trait = "0.1.24"

[dev-dependencies]
tokio = { version = "0.3.2", features = [ "macros" ] }
