[package]
name = "cometd"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
async-trait = "0.1.24"
futures = "0.3.4"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = [ "stream", "sync", "time" ] }
tokio-native-tls = "0.1.0"
tokio-tungstenite = { version = "0.13.0", features = [ "tls" ] }
tungstenite = "0.11.1"
thiserror = "1.0.22"

[dev-dependencies]
tokio = { version = "0.2.13", features = [ "macros" ] }
