[package]
name = "kahoot"
version = "0.0.1"
authors = ["adumbidiot <nathaniel.daniel23@outlook.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.99", features = [ "derive" ] }
cometd-client = {path = "./cometd-client"}
rand = "0.7.0"
tokio = "0.2.11"

kahoot = { git = "https://github.com/adumbidiot/kahoot-rs" }
