[package]
name = "kahoot-legacy"
version = "0.0.1"
authors = ["adumbidiot <nathaniel.daniel23@outlook.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.48"
serde = { version = "1.0.104", features = [ "derive" ] }
cometd-client = {path = "./cometd-client"}
rand = "0.7.3"
tokio = "0.2.13"

kahoot = { git = "https://github.com/adumbidiot/kahoot-rs" }
