[package]
name = "kahoot-swarm"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
env_logger = "0.8.2"
kahoot = { path = "../kahoot" }
tokio = { version = "1.1.0", features = [ "macros", "rt-threaded" ] }
rand = "0.7.3"
futures = "0.3.4"
