[package]
name = "kahoot-swarm"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
env_logger = "0.8.2"
kahoot = { path = "../kahoot" }
tokio = { version = "0.2.13", features = [ "macros", "rt-threaded" ] }
rand = "0.8.4"
futures = "0.3.4"
