[package]
name = "kahoot"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[dependencies]
bytes = "0.5.4"
http = "0.2.0"
hyper = "0.13.2"
hyper-tls = "0.4.1"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
ducc = "0.1.2"
base64 = "0.11.0"
