[package]
name = "kahoot"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[dependencies]
async-trait = "0.1.24"
base64 = "0.12.0"
cometd = { path = "../cometd" }
bytes = "0.5.4"
ducc = "0.1.3"
http = "0.2.0"
hyper = "0.13.3"
hyper-tls = "0.4.1"
parking_lot = "0.11.0"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = [ "time" ] }

[dev-dependencies]
tokio = { version = "0.2.13", features = [ "macros", "rt-threaded" ] }
rand = "0.7.3"
