[package]
name = "kahoot"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
async-trait = "0.1.24"
base64 = "0.13.0"
# Boa = "0.10.0"
Boa = { git = "https://github.com/boa-dev/boa", rev = "7f1d6aae15a53b07e477bb6356a6f69247c24bad", default-features = false } # Fixes lexing bug, wait for next release
cometd = { path = "../cometd" }
bytes = "0.6.0"
ducc = "0.1.3"
http = "0.2.0"
hyper = "0.13.3"
hyper-tls = "0.4.1"
log = "0.4.11"
parking_lot = "0.11.0"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
thiserror = "1.0.22"
tokio = { version = "0.2.13", features = [ "time" ] }

[dev-dependencies]
tokio = { version = "0.2.13", features = [ "macros", "rt-threaded" ] }
rand = "0.7.3"
